fix footer text align

--- a/css/main.css
+++ b/css/main.css
@@ -1149,6 +1149,7 @@ input {
   }
   .social__text {
     margin-left: 0px;
+    text-align: start;
   }
   .newsletter {
     flex-basis: auto;
