--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -882,6 +882,7 @@ input {
   }
   .social__text {
     margin-left: 0px;
+    text-align: start;
   }
   .newsletter {
     flex-basis: auto;
