--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -302,6 +302,7 @@
 
   .social__text {
     margin-left: 0px;
+    text-align: start;
   }
 
   .newsletter {
